--- a/modules/salt/pages/large-scale-tuning.adoc
+++ b/modules/salt/pages/large-scale-tuning.adoc
@@ -511,7 +511,7 @@ This section contains information about the available parameters.
 | Value recommendation | 1-60. For 128{nbsp}GB of RAM, 10 is expected to give good results.
 | Location             | [path]``/etc/sysctl.conf``
 | Example              | `vm.swappiness = 20`
-| More information     | https://www.suse.com/documentation/sles-15/book_sle_tuning/data/cha_tuning_memory_vm.html
+| More information     | https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-tuning-memory.html#cha-tuning-memory-vm
 |===
 
 
