--- a/modules/salt/pages/salt-formulas-standard.adoc
+++ b/modules/salt/pages/salt-formulas-standard.adoc
@@ -1,6 +1,8 @@
 [[salt.formulas]]
 = Standard Salt Formulas
 
+// This page was delinked when the new formulas layout was implemented in June 2019. It remains here for posterity and can be deleted once we are sure there's no relevant content in it. LKB 2019-10-15
+
 You can see the currently available installed formulas in the {productname} {webui}.
 Navigate to menu:Salt[Formula Catalog].
 
