--- a/modules/upgrade/pages/client-migration.adoc
+++ b/modules/upgrade/pages/client-migration.adoc
@@ -12,7 +12,7 @@ Upgrading traditional clients from {slea}{nbsp}12 with the latest Service Pack t
 
 Upgrading traditional clients from earlier {slea}{nbsp}15 Service Packs to later {slea}{nbsp}15 Service Packs is fully automated.
 
-For supported {sle}{nbsp}15 upgrade paths, see  https://www.suse.com/documentation/sles-15/book_sle_upgrade/data/sec_upgrade-paths_supported.html
+For supported {sle}{nbsp}15 upgrade paths, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-upgrade-paths.html
 
 [NOTE]
 ====
@@ -76,7 +76,7 @@ In order to switch from the old SLE{nbsp}12{nbsp}SP4 base channel to the new SLE
 . OPTIONAL: If you want to limit the usage, enter your value in the [guimenu]``Usage`` text field.
 . Select the [systemitem]``SLE-Product-SLES15-Pool for x86_64`` base channel.
 . OPTIONAL: Select any [guimenu]``Add-On System Types``.
-For more information, see https://www.suse.com/documentation/sles-15/book_quickstarts/data/art_modules.html.
+For more information, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/art-modules.html.
 . Click btn:[Create Activation Key].
 . Click the [guimenu]``Child Channels`` tab and select the required channels.
 . Click btn:[Update Key].
