--- a/modules/administration/pages/reports.adoc
+++ b/modules/administration/pages/reports.adoc
@@ -12,7 +12,8 @@ The [command]``spacewalk-report`` command allows you to organize and display rep
 You can generate reports on:
 
 . System Inventory: list all the systems registered to {productname}.
-. Patches: list all the patches relevant to the registered systems and sorts patches by severity, as well as the systems that apply to a particular patch.
+. Patches: list all the patches relevant to the registered systems.
+You can sort patches by severity, as well as the systems that apply to a particular patch.
 . Users: list all registered users and any systems associated with a particular user.
 
 To get the report in CSV format, run this command at the command prompt on the server:
@@ -40,7 +41,7 @@ This table lists the available reports:
 | Cloned Channel Report | [command]``cloned-channels`` | Detailed report of cloned channels.
 | Configuration Files | [command]``config-files`` | All configuration file revisions for all organizations, including  file contents and file information.
 | Latest Configuration Files | [command]``config-files-latest`` | The most recent configuration file revisions for all organizations, including  file contents and file information.
-| Custom Channels | [command]``custom-channels`` | Channel metadata for all channels owned by specific organizations
+| Custom Channels | [command]``custom-channels`` | Channel metadata for all channels owned by specific organizations.
 | Custom Info | [command]``custom-info`` | Client custom information.
 | Patches in Channels | [command]``errata-channels`` | All patches in channels.
 | Patches Details | [command]``errata-list`` | All patches that affect registered clients.
