--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -7,7 +7,7 @@ Fully Qualified Domain Name (FQDN)::
 The {productname} server must resolve its FQDN correctly.
 If the FQDN cannot be resolved, it can cause serious problems in a number of different components.
 +
-For more information about configuring the hostname and DNS, see link: https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-network.html#sec-network-yast-change-host.
+For more information about configuring the hostname and DNS, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-network.html#sec-network-yast-change-host.
 
 Hostname and IP Address::
 To ensure that the {productname} domain name can be resolved by its clients, both server and client machines must be connected to a working DNS server.
