--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -13,7 +13,7 @@ Hostname and IP Address::
 To ensure that the {productname} domain name can be resolved by its clients, both server and client machines must be connected to a working DNS server.
 You also need to ensure that reverse lookups are correctly configured.
 +
-For more information about setting up a DNS server, see link: https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-dns.html.
+For more information about setting up a DNS server, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-dns.html.
 
 Using a Proxy When Installing from {sle} Media::
 If you are on an internal network and do not have access to {scc}, you can set up and use a proxy during installation.
