--- a/modules/installation/pages/network-requirements.adoc
+++ b/modules/installation/pages/network-requirements.adoc
@@ -18,7 +18,7 @@ For more information about setting up a DNS server, see https://documentation.su
 Using a Proxy When Installing from {sle} Media::
 If you are on an internal network and do not have access to {scc}, you can set up and use a proxy during installation.
 +
-For more information about configuring a proxy for access to {scc} during a {sle} installation, see link: https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-boot-parameters.html#sec-boot-parameters-advanced-proxy.
+For more information about configuring a proxy for access to {scc} during a {sle} installation, see https://documentation.suse.com/sles/15-SP1/html/SLES-all/cha-boot-parameters.html#sec-boot-parameters-advanced-proxy.
 
 
 .Naming Your Server
