--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -5,7 +5,7 @@
 This section describes migrating from an existing {slepos} 11 installation to a new {susemgr} installation.
 You can perform this migration all at once by creating a data dump in a single file, and then moving it to the new server.
 
-Alternatively, you can perform the migration in stages by creating a data dump for each branch, and moving them to the new server one by one..
+Alternatively, you can perform the migration in stages by creating a data dump for each branch, and moving them to the new server one by one.
 Importing and deploying the converted data can also be done in one or multiple steps, depending on your environment.
 
 
