edits per feedback

--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -11,7 +11,8 @@ If you need further information or support, try one of these options.
 
 For {susemgr} documentation, visit https://documentation.suse.com/suma/4.0/.
 
-For legacy {slepos} or {smr} documentation, see https://documentation.suse.com/sle-pos/11-SP3/ or https://documentation.suse.com/suma-retail/3.2/.
+For legacy {slepos} documentation, see https://documentation.suse.com/sle-pos/11-SP3/.
+For legacy {smr} documentation, see https://documentation.suse.com/suma-retail/3.2/.
 Note, however, that {smr} documentation supersedes this information.
 
 
