basic concept (from mc's draft)

--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -11,6 +11,19 @@ When you have created an {ay} file, you can upload and manage it the within {pro
 For {rhel} clients, use Kickstart.
 Kickstart files are created, modified, and managed within the {productname} {webui}.
 
+
+
+== Basic Concept
+
+It is best practice to boot for installation with Network Boot (PXE Boot).
+For this you need a DHCP server that points to your {productname} Server.
+The {productname} Server then acts as a TFTP server.
+
+The TFTP environment is generated with a tool called Cobbler.
+Cobbler can also generate a bootable ISO image.
+The ISO image can be used to install machines when PXE boot is not an option; for more information, see (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler).
+
+
 You can use Cobbler as an installation server.
 Cobbler allows you to automate bare-metal installations.
 It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
