start with profiles

--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -10,7 +10,7 @@ It contains the Linux kernel, an initrd, and other files required to boot the OS
 
 . In the {productname} {webui}, navigate to menu:System[Autoinstallation > Distributions].
 
-. In the [guimenu]``Autoinstallable Distributions`` dialog, click [guimenu]``Distribution``:
+. In the [guimenu]``Autoinstallable Distributions`` dialog, click [guimenu]``Create Distribution``:
 * In the [guimenu]``Distribution Label`` field, enter a name to identify your autoinstallable distribution.
 * In the [guimenu]``Tree Path`` field, enter the path to an installation tree located on your {productname} Server.
 * Select the matching [guimenu]``Base Channel`` mirrored on the {productname} Server.
@@ -26,10 +26,12 @@ For more information, see xref:reference:systems/autoinst-distributions.adoc[].
 
 .Procedure: Preparing a Profile
 
-At System => Autoinstallation => Profiles you can add profiles for autoinstallations.
-It can be AutoYaST or Kickstart Profiles.
+. In the {productname} {webui}, navigate to menu:System[Autoinstallation > Profiles].
 
-You have two variants to create Profiles.
+. In the [guimenu]``Autoinstallation Profiles`` dialog, add the profile for your  autoinstallation.
+It can be an ``AutoYaST`` or ``Kickstart`` profile.
+
+. There are two ways to create profiles.
 
 1. Create a Kickstart Profile using a Wizard
 2. Import a Profile (Kickstart or AutoYaST)
