--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -31,23 +31,26 @@ For more information, see xref:reference:systems/autoinst-distributions.adoc[].
 . In the [guimenu]``Autoinstallation Profiles`` dialog, add the profile for your  autoinstallation.
 It can be an ``AutoYaST`` or ``Kickstart`` profile.
 
-. There are two ways to create profiles.
+. There are two ways to create profiles:
+* Create a ``Kickstart`` profile using a wizard
+* Upload an externally created profile (``Kickstart`` or ``AutoYaST``)
 
-1. Create a Kickstart Profile using a Wizard
-2. Import a Profile (Kickstart or AutoYaST)
+For more information about the ``Kickstart`` wizard, see xref:reference:systems/autoinst-profiles.adoc[].
 
-(For more information about the Kickstart Wizard link to Reference Guide?)
 
-==== Import a Profile
 
-You provide a lable for the profile and select a distribution which should be used for this profile.
+== Create a Profile
 
-Virtualization type and again kernel options.
+You provide a label for the profile and select an ``Autoinstallation Tree`` (distribution) that you want to use for this profile.
 
-Write or upload the kickstart or autoyast profile.
+Virtualization type.
+// later?  and again kernel options.
 
-AutoYaST is able to dump a profile from an existing installation. This can be used as base, but needs
-some adaptions to be usable from SUSE Manager:
+Write or browse and upload the ``Kickstart`` or ``AutoyaST`` profile.
+
+AutoYaST is able to dump a profile from an existing installation.
+This can be used as base, but needs some adaptions to be usable from {productname}:
+
 
 - Change the **add-on** section and add SUSE Manager URLs. These URLs must have a special format
 
