--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -46,48 +46,62 @@ You provide a label for the profile and select an ``Autoinstallation Tree`` (dis
 Virtualization type.
 // later?  and again kernel options.
 
-Write or browse and upload the ``Kickstart`` or ``AutoyaST`` profile.
+Write, or browse and upload the ``Kickstart`` or ``AutoyaST`` profile.
 
+[TIP]
+====
 AutoYaST is able to dump a profile from an existing installation.
 This can be used as base, but needs some adaptions to be usable from {productname}:
+====
 
 
-- Change the **add-on** section and add SUSE Manager URLs. These URLs must have a special format
+* Change the **add-on** section and add SUSE Manager URLs.
+These URLs must have a special format:
++
 
-  http://$redhat_management_server/ks/dist/child/`channel-label`/`distribution-label`
+----
+http://$redhat_management_server/ks/dist/child/`channel-label`/`distribution-label`
+----
 
-Replace **channel-label** and **distribution-label** with the correct labels.
-It would make sence to use a variable for `distribution-label`.
+* Replace **channel-label** and **distribution-label** with the correct labels.
+It often makes sence to use a variable for `distribution-label`.
 Ensure that the distribution label corresponds to the Autoinstallable Distribution you have selected.
-You can only configure "child channels" here. These channels must be childs of the base channel
-you selected in the distribution you use for this profile.
+You can only configure "child channels" here. These channels must be children of the base channel you selected in the distribution you use for this profile.
++
+[TIP]
+====
+You do not need to specify a base channel.
+You defined the base channel in the distribution already.
+====
 
-You do not need to specify a base channel. You defined the base channel in the distribution already.
-
-- Register the system after it is installed. For this we provide "snippets" which can be used.
-
+* Register the system after it is installed.
+For this step we provide "snippets" that can be used
++
 For salt managed clients the script `spacewalk/sle_register_salt` can be used:
-
-```
++
+----
   <scripts>
     <init-scripts config:type="list">
       $SNIPPET('spacewalk/sle_register_salt')
     </init-scripts>
   </scripts>
-```
-
+----
++
 For traditional client registration `spacewalk/sles_register_script` could be used:
-
-```
++
+----
   <scripts>
     <init-scripts config:type="list">
       $SNIPPET('spacewalk/sles_register_script')
     </init-scripts>
   </scripts>
-```
-
-Note: when registering with salt, the salt key must be accepted on the SUSE Manager Server before
+----
++
+[Note]
+====
+When registering with salt, the salt key must be accepted on the SUSE Manager Server before
 the autoinstallation proceedure could be finished.
+====
 
 ==== Variables and snippets
 
