Technical Review: tshoot-intro.adoc (#739)
* Moved reports to its own section

* Edits per feedback

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* initial add: missing reports

* add missing reports

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <moio@suse.com>

* Update modules/administration/pages/reports.adoc

Co-Authored-By: Silvio Moioli <m

--- a/modules/administration/nav-administration-guide.adoc
+++ b/modules/administration/nav-administration-guide.adoc
@@ -34,6 +34,8 @@ ifndef::backend-pdf[]
 // Content Lifecycle
 ** xref:content-lifecycle.adoc[Content Lifecycle Management]
 *** xref:content-lifecycle-examples.adoc[Content Lifecycle Management Examples]
+// Spacewalk Reports
+** xref:reports.adoc[Generate Reports]
 ** Tuning
 *** xref:tuning-changelogs.adoc[Tuning Changelogs]
 ** Maintenance Window
@@ -119,6 +121,10 @@ include::modules/administration/pages/space-management.adoc[leveloffset=+1]
 // Content Lifecycle
 
 include::modules/administration/pages/content-lifecycle.adoc[leveloffset=+1]
+
+// Spacewalk Reports
+
+include::modules/administration/pages/reports.adoc[leveloffset=+1]
 
 include::modules/administration/pages/content-lifecycle-examples.adoc[leveloffset=+2]
 
