Update xrefs to docs site for new docs URL (#820)
* Admin Guide

* Client Config

* Install Guide

* Ref Guide

* Retail

* Salt

* Upgrade

* Update modules/installation/pages/network-requirements.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* Update modules/installation/pages/network-requirements.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* Update modules/installation/pages/network-requirements.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* Update modules/retail/pages/retail-migration-slepostosuma.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* Update modules/retail/pages/retail-next.adoc

Co-Authored-By: Karl Eichwalder <ke@suse.de>

* edits per feedback

--- a/modules/retail/pages/retail-next.adoc
+++ b/modules/retail/pages/retail-next.adoc
@@ -9,9 +9,10 @@ If you need further information or support, try one of these options.
 [[retail.sect.next.docs]]
 == More Documentation
 
-For {susemgr} documentation, visit https://www.suse.com/documentation/suse-manager-4/
+For {susemgr} documentation, visit https://documentation.suse.com/suma/4.0/.
 
-For legacy {slepos} or {smr} documentation, see https://www.suse.com/documentation/slepos11/index.html or https://www.suse.com/documentation/suse-manager-for-retail.
+For legacy {slepos} documentation, see https://documentation.suse.com/sle-pos/11-SP3/.
+For legacy {smr} documentation, see https://documentation.suse.com/suma-retail/3.2/.
 Note, however, that {smr} documentation supersedes this information.
 
 
