--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -3,8 +3,9 @@
 
 
 This section describes migrating from an existing {slepos} 11 installation to a new {susemgr} installation.
-You can perform this migration all at once by creating a data dump in a single file, and then moving it to the new server; see <<retail_migr.sect.slepostosuma.s1.complete>>.
-Alternatively, you can perform the migration in stages by creating a data dump for each branch, and moving them to the new server one by one; see <<retail_migr.sect.slepostosuma.s1.bbb>>.
+You can perform this migration all at once by creating a data dump in a single file, and then moving it to the new server.
+
+Alternatively, you can perform the migration in stages by creating a data dump for each branch, and moving them to the new server one by one.
 Importing and deploying the converted data can also be done in one or multiple steps, depending on your environment.
 
 
@@ -15,9 +16,7 @@ Importing and deploying the converted data can also be done in one or multiple s
 In this procedure, you create a single data dump in an XML file, convert it to YAML, and migrate it to the new infrastructure all at once.
 
 . Install a {susemgr} server {productnumber} (with the Retail pattern).
-For more information, see https://www.suse.com/documentation/suse-manager-for-retail.
-// was:  https://www.suse.com/documentation/suse-manager-for-retail-3-2/retail-getting-started/retail.chap.install.html.
-
+For more information, see xref:modules/retail/pages/retail-install.adoc[].
 . On the SLEPOS Admin server export all the data stored in LDAP to an XML file.
 Run this command as an administrator:
 +
@@ -89,7 +88,7 @@ posAdmin --export --type xml --file dumpfile.xml --user $branch_dn \
     --password $password
 ----
 +
-For background information about SLEPOS branch server configuration, see https://www.suse.com/documentation/slepos11/book_slepos/data/cha_slepos_branchserv.html.
+For background information about SLEPOS branch server configuration, see https://documentation.suse.com/sle-pos/11-SP3/html/SLEPOS-guide/cha.slepos_branchserv.html.
 
 . Review the generated YAML file ([literal]``retail.yml``) and adjust it as necessary.
 Consider ``HWTYPE`` group naming and image name and version changes in the partitioning data.
