--- a/modules/retail/pages/retail-migration-slepostosuma.adoc
+++ b/modules/retail/pages/retail-migration-slepostosuma.adoc
@@ -16,7 +16,7 @@ Importing and deploying the converted data can also be done in one or multiple s
 In this procedure, you create a single data dump in an XML file, convert it to YAML, and migrate it to the new infrastructure all at once.
 
 . Install a {susemgr} server {productnumber} (with the Retail pattern).
-For more information, see xref:modules/retail/pages/retail-install.adoc[].
+For more information, see xref:retail:retail-install.adoc[].
 . On the SLEPOS Admin server export all the data stored in LDAP to an XML file.
 Run this command as an administrator:
 +
