--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -40,7 +40,7 @@ This procedure does not manipulate the original client, which will still be regi
 
 .Procedure: Resolving Duplicate Machine IDs in Cloned Salt Clients
 
-. For {slsa}{nbsp}12: If your machines have the same machine ID, delete the file on each client and re-create it:
+. For {slsa}{nbsp}12: If your machines have the same machine ID, delete the file on each duplicated client and re-create it:
 +
 ----
 # rm /etc/machine-id
