--- a/modules/client-configuration/pages/autoinstallation-methods.adoc
+++ b/modules/client-configuration/pages/autoinstallation-methods.adoc
@@ -22,10 +22,4 @@ The {productname} Server then acts as a TFTP server.
 The TFTP environment is generated with a tool called Cobbler.
 Cobbler can also generate a bootable ISO image.
 The ISO image can be used to install machines when PXE boot is not an option; for more information, see (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler).
-
-
-You can use Cobbler as an installation server.
-Cobbler allows you to automate bare-metal installations.
-It uses DHCP to access a PXE boot server, and can be used in virtualized environments.
-
-It is also possible to perform a disconnected setup, in an environment where you cannot access the internet.
+// Cobbler allows you to automate bare-metal installations.
