--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,17 +1,21 @@
+[[client-cfg-autoinstallation]]
+
+
 
 = Introduction:
 
 Remove the last two paragraphs. They are just missleading and no main features.
+==> Keeping cobbler nevertheless here?
+
 
 == Basic Concepts:
 
-Installation should happen via Network Boot (PXE Boot).
-For this you need a DHCP server which point to yout SUSE Manager Server as tftp server.
+| Installation should happen via Network Boot (PXE Boot).
+| For this you need a DHCP server which point to yout SUSE Manager Server as tftp server.
 
-The tftp environment is generated with a tool called cobbler.
-
-Cobbler can also generate a bootable ISO which can be used to install machines where
-PXE boot is not an option (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler)
+| The tftp environment is generated with a tool called cobbler.
+| 
+| Cobbler can also generate a bootable ISO which can be used to install machines where PXE boot is not an option (https://documentation.suse.com/external-tree/en-us/suma/4.0/suse-manager/client-configuration/cobbler.html#_build_isos_with_cobbler)
 
 === A Distribution:
 
