--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -48,27 +48,27 @@ Virtualization type.
 
 Write, or browse and upload the ``Kickstart`` or ``AutoyaST`` profile.
 
-[TIP]
+[NOTE]
 ====
 AutoYaST is able to dump a profile from an existing installation.
-This can be used as base, but needs some adaptions to be usable from {productname}:
+This can be used as template, but needs some adaptions to be usable from {productname}:
 ====
 
 
-* Change the **add-on** section and add SUSE Manager URLs.
+* Change the [literal]``add-on`` section and add {productname} URLs.
 These URLs must have a special format:
 +
 
 ----
-http://$redhat_management_server/ks/dist/child/`channel-label`/`distribution-label`
+http://$redhat_management_server/ks/dist/child/<channel-label>/<distribution-label>
 ----
 
-* Replace **channel-label** and **distribution-label** with the correct labels.
-It often makes sence to use a variable for `distribution-label`.
+* Replace [literal]``<channel-label>`` and [literal]``<distribution-label>`` with the correct labels.
+It often makes sense to use a variable for `distribution-label`.
 Ensure that the distribution label corresponds to the Autoinstallable Distribution you have selected.
 You can only configure "child channels" here. These channels must be children of the base channel you selected in the distribution you use for this profile.
 +
-[TIP]
+[NOTE]
 ====
 You do not need to specify a base channel.
 You defined the base channel in the distribution already.
@@ -97,7 +97,7 @@ For traditional client registration `spacewalk/sles_register_script` could be us
   </scripts>
 ----
 +
-[Note]
+[NOTE]
 ====
 When registering with salt, the salt key must be accepted on the SUSE Manager Server before
 the autoinstallation proceedure could be finished.
