--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -5,9 +5,12 @@ This is about PostgreSQL database migration.
 
 If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
 If you are already using PostreSQL 10, skip this section.
-If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the SUSE Manager migration.
+If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the {productname} migration.
+// 2019-10-16, ke: I think we'd better keep the info on 9.4 for the moment
+If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation at https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
+You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
-// I would not talk about postgresql 9.4 at all. It is so out of date, nobody should (and in fact can) still use it. The reference to "Prepare to Upgrade" looks superfluous to me; it follows immediately anyway.
+
 
 ////
 == Background Information
