--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -75,9 +75,9 @@ You defined the base channel in the distribution already.
 ====
 
 * Register the system after it is installed.
-For this step we provide "snippets" that can be used
+For this step we provide script snippets that can be used.
 +
-For salt managed clients the script `spacewalk/sle_register_salt` can be used:
+For Salt managed clients, use the `spacewalk/sle_register_salt` snippet:
 +
 ----
   <scripts>
@@ -87,7 +87,7 @@ For salt managed clients the script `spacewalk/sle_register_salt` can be used:
   </scripts>
 ----
 +
-For traditional client registration `spacewalk/sles_register_script` could be used:
+For traditional clients, use the `spacewalk/sles_register_script` snippet:
 +
 ----
   <scripts>
@@ -97,29 +97,39 @@ For traditional client registration `spacewalk/sles_register_script` could be us
   </scripts>
 ----
 +
-[NOTE]
+[IMPORTANT]
 ====
-When registering with salt, the salt key must be accepted on the SUSE Manager Server before
-the autoinstallation proceedure could be finished.
+When registering with Salt, the Salt key must be accepted on the {productname} Server before
+the autoinstallation procedure could be finished.
 ====
+
+
 
 ==== Variables and snippets
 
-The profiles are rendered when a client request it. This provide the opportunity to use variables
-in the profile. In Profiles you can find a tab "Variables" where you can specify them.
+The final state of a profile is composed when a client requests it.
+This allows you using variables in profiles.
+In [guimenu]``Profiles`` you can find the [guimenu]``Variables`` where you can define variables.
 
-Typical variables are:
+Often used variables are:
 
-redhat_management_server: the server where you register to (automatically set)
-org: the organization id where this profile is created. (automatically set)
-registration_key: this is used in the register snippets. When you specify it, you can set the activation key to be used to register the system.
-dont_register: if specified the registration will be skipped.
-allow_config_actions: if set to 1, it will allow traditional configuration management (traditional only)
-allow_remote_commands: if set to 1, it will allow traditional remote command execution (traditional only)
-dont_disable_automatic_onlineupdate: if set, the automatic online update stay enabled. (SUSE OSes only)
-dont_disable_local_repos: is set, local repositories will stay active (not recommended)
+redhat_management_server::
+the server where you register to (automatically set).
+org::
+the organization id where this profile is created (automatically set).
+registration_key::
+used in the register snippets.
+When you specify it, you can set the activation key to be used to register the system.
+dont_register::
+if specified the registration will be skipped.
+allow_config_actions::
+if set to 1, it will allow traditional configuration management (traditional only).
+allow_remote_commands::
+if set to 1, it will allow traditional remote command execution (traditional only).
+dont_disable_automatic_onlineupdate::
+if set, the automatic online update stay enabled (SUSE OSes only).
+dont_disable_local_repos::
+if set, local repositories will stay active (not recommended).
 
-To see available snippets, look at System => Autoinstallation => Autoinstallation Snippets .
-You can write own once
-
-
+Navigate to menu:Systems[Autoinstallation > Autoinstallation Snippets] to see which snippets are available.
+For more information, see xref:reference:systems/autoinst-snippets.adoc[].
