--- a/modules/upgrade/pages/db-migration.adoc
+++ b/modules/upgrade/pages/db-migration.adoc
@@ -5,10 +5,10 @@ This is about PostgreSQL database migration.
 
 If you want to upgrade {productname} 3.2 to {productname} 4 you must check whether {productname} 3.2 is already based on PostgreSQL version 10.
 If you are already using PostreSQL 10, skip this section.
-If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the database migration.
-For more information about migrating PostgreSQL 9.6 to version 10, see xref:db-migration.adoc#db-migration-prepare[].
-If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation: https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql
-You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
+If you are using an older version, such as version 9.6, you must migrate PostgreSQL to version 10 before you begin the {productname} migration.
+// 2019-10-16, ke: I think we'd better keep the info on 9.4 for the moment
+If you run PostgreSQL{nbsp}9.4 on {productname} 3.2, see the 3.2 product documentation at https://documentation.suse.com/external-tree/en-us/suma/3.2/susemanager-best-practices/html/book.suma.best.practices/bp.sp.migration.html#sp.migration.postgresql.
+You cannot migrate directly from PostgreSQL{nbsp}9.4 to version 10.
 
 
 
