Change the menu reference to the Channels view

--- a/modules/client-configuration/pages/channels.adoc
+++ b/modules/client-configuration/pages/channels.adoc
@@ -17,8 +17,8 @@ A system can be subscribed to multiple child channels of its base channel.
 When a system has been assigned to a base channel, it is only possible for that system to install the related child channels.
 For example, if a system has been assigned to the {sls}{nbsp}12 `x86_64` base channel, they will only be able to install or update packages compatible with {sls}{nbsp}12 `x86_64`.
 
-In the {productname} {webui} you can browse your available channels by navigating to menu:Software[Channels].
-You can modify or create new channels by navigating to menu:Software[Manage Software Channels].
+In the {productname} {webui} you can browse your available channels by navigating to menu:Software[Channel List > All].
+You can modify or create new channels by navigating to menu:Software[Manage > Channels].
 
 
 
