Change the file name for the example file

--- a/modules/client-configuration/pages/registration-bootstrap.adoc
+++ b/modules/client-configuration/pages/registration-bootstrap.adoc
@@ -93,7 +93,7 @@ cd /srv/www/htdocs/pub/bootstrap/
 cp bootstrap.sh bootstrap-sles11.sh
 cp bootstrap.sh bootstrap-sles12.sh
 ----
-. Open [path]``sles12.sh`` for modification.
+. Open [path]``bootstrap-sles12.sh`` for modification.
 Scroll down and modify both lines marked in green.
 You must comment out `exit 1` with a hash mark (``#``) to activate the script and then enter the name of the key for this script in the `ACTIVATION_KEYS=` field as follows:
 +
