--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -6,7 +6,7 @@ This sections contains a list of features that are supported on {rhel} and {res}
 
 
 
-== Supported CentOS Features
+== Supported Red Hat Features
 
 This table lists the availability of various features on {rhel} and {res} clients.
 
@@ -22,39 +22,39 @@ The icons in this table indicate:
 [cols="1,1,1,1,1", options="header"]
 .Supported Features on {rhel} Operating Systems
 |===
-| Feature | {ubuntu}{nbsp}16.04 | {ubuntu}{nbsp}18.04
-| Client  | icon:check[role="green"] | icon:check[role="green"]
-| Registration | ``Salt`` | ``Salt``
-| Install packages | ``Salt`` | ``Salt``
-| Apply patches | icon:times[role="danger"] | icon:times[role="danger"]
-| Remote commands | ``Salt`` | ``Salt``
-| System package states | ``Salt`` | ``Salt``
-| System custom states | ``Salt`` | ``Salt``
-| Group custom states | ``Salt`` | ``Salt``
-| Organization custom states    | ``Salt`` | ``Salt``
-| System set manager (SSM) | ``Salt`` | ``Salt``
-| Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
-| Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"]
-| Virtual guest installation ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
-| System redeployment ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
-| Contact methods | ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | ``Salt`` | ``Salt``
-| Action chains | ``Salt`` | ``Salt``
-| Software crash reporting | icon:times[role="danger"] | icon:times[role="danger"]
-| Staging (pre-download of packages) |  icon:times[role="danger"] | icon:times[role="danger"]
-| Duplicate package reporting | ``Salt`` | ``Salt``
-| CVE auditing |  icon:times[role="danger"] | icon:times[role="danger"]
-| SCAP auditing | icon:question[role="gray"] | icon:question[role="gray"]
-| Package verification | icon:times[role="danger"] | icon:times[role="danger"]
-| Package locking | icon:times[role="danger"] | icon:times[role="danger"]
-| System locking |  icon:times[role="danger"] | icon:times[role="danger"]
-| System snapshot | icon:times[role="danger"] | icon:times[role="danger"]
-| Configuration file management |  ``Salt`` | ``Salt``
-| Package profiles |  ``Salt``: Profiles supported, Sync not supported | ``Salt``: Profiles supported, Sync not supported
-| Power management |  icon:check[role="green"] | icon:check[role="green"]
-| Monitoring |  icon:times[role="danger"]  | ``Salt``
-| Docker buildhost |  icon:question[role="gray"]   | icon:question[role="gray"]
-| Build Docker image with OS | ``Salt`` | ``Salt``
-| Kiwi buildhost |   icon:times[role="danger"] | icon:times[role="danger"]
-| Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]
+| Feature | {res}{nbsp}6 | {res}{nbsp}7 | {rhel}{nbsp}6 | {rhel}{nbsp}8
+| Client  | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Registration | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Install packages | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Apply patches | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Remote commands | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| System package states | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
+| System custom states | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
+| Group custom states | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
+| Organization custom states    | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
+| System set manager (SSM) | ``Salt`` | ``Salt`` | ``Salt`` | ``Salt``
+| Service pack migration | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"] | icon:times[role="danger"]
+| Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"] | icon:question[role="gray"]
+| Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"] | ``Traditional`` | icon:check[role="green"]
+| Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH
+| {productname} Proxy | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Action chains | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Software crash reporting | icon:times[role="danger"] | ``Traditional`` | icon:times[role="danger"] | ``Traditional``
+| Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Duplicate package reporting | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| CVE auditing |  icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| SCAP auditing | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Package verification | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| Package locking | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| System locking |  ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| System snapshot | ``Traditional`` | ``Traditional`` | ``Traditional`` | ``Traditional``
+| Configuration file management |  icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
+| Snapshots and profiles |  ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Traditional``. ``Salt``: Profiles supported, Sync not supported |  ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Traditional``. ``Salt``: Profiles supported, Sync not supported
+| Power management |  icon:check[role="green"] | icon:check[role="green"] |  icon:check[role="green"] | icon:check[role="green"]
+| Monitoring |  ``Salt`` | ``Salt`` |  ``Salt`` | ``Salt``
+| Docker buildhost |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
+| Build Docker image with OS | icon:times[role="danger"] | icon:times[role="danger"] | ``Salt`` | ``Salt``
+| Kiwi buildhost |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
+| Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]  |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
