--- a/modules/client-configuration/pages/supported-features-centos.adoc
+++ b/modules/client-configuration/pages/supported-features-centos.adoc
@@ -19,42 +19,42 @@ The icons in this table indicate:
 * ``Salt`` the feature is supported only on Salt clients.
 
 
-[cols="1,1,1,1,1", options="header"]
+[cols="1,1,1", options="header"]
 .Supported Features on {centos} Operating Systems
 |===
-| Feature | {ubuntu}{nbsp}16.04 | {ubuntu}{nbsp}18.04
-| Client  | icon:check[role="green"] | icon:check[role="green"]
-| Registration | ``Salt`` | ``Salt``
-| Install packages | ``Salt`` | ``Salt``
-| Apply patches | icon:times[role="danger"] | icon:times[role="danger"]
-| Remote commands | ``Salt`` | ``Salt``
+| Feature | {centos}{nbsp}6 | {centos}{nbsp}7
+| Client  | icon:check[role="green"] with expanded support | icon:check[role="green"] with expanded support
+|Registration | icon:check[role="green"] | icon:check[role="green"]
+| Install packages | icon:check[role="green"] | icon:check[role="green"]
+| Apply patches | icon:check[role="green"] third-party support required for errata | icon:check[role="green"] third-party support required for errata
+| Remote commands | icon:check[role="green"] | icon:check[role="green"]
 | System package states | ``Salt`` | ``Salt``
 | System custom states | ``Salt`` | ``Salt``
 | Group custom states | ``Salt`` | ``Salt``
 | Organization custom states    | ``Salt`` | ``Salt``
-| System set manager (SSM) | ``Salt`` | ``Salt``
+| System set manager (SSM) | icon:check[role="green"] | icon:check[role="green"]
 | Service pack migration | icon:times[role="danger"] | icon:times[role="danger"]
 | Virtual host management (VHM) | icon:question[role="gray"] | icon:question[role="gray"]
-| Virtual guest installation ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
-| System redeployment ({ay}) | icon:question[role="gray"] | icon:question[role="gray"]
-| Contact methods | ``Salt``: ZeroMQ, Salt-SSH | ``Salt``: ZeroMQ, Salt-SSH
-| {productname} Proxy | ``Salt`` | ``Salt``
-| Action chains | ``Salt`` | ``Salt``
-| Software crash reporting | icon:times[role="danger"] | icon:times[role="danger"]
-| Staging (pre-download of packages) |  icon:times[role="danger"] | icon:times[role="danger"]
-| Duplicate package reporting | ``Salt`` | ``Salt``
-| CVE auditing |  icon:times[role="danger"] | icon:times[role="danger"]
-| SCAP auditing | icon:question[role="gray"] | icon:question[role="gray"]
-| Package verification | icon:times[role="danger"] | icon:times[role="danger"]
-| Package locking | icon:times[role="danger"] | icon:times[role="danger"]
-| System locking |  icon:times[role="danger"] | icon:times[role="danger"]
-| System snapshot | icon:times[role="danger"] | icon:times[role="danger"]
-| Configuration file management |  ``Salt`` | ``Salt``
-| Package profiles |  ``Salt``: Profiles supported, Sync not supported | ``Salt``: Profiles supported, Sync not supported
+| Virtual guest installation ({ay}) | icon:check[role="green"] | icon:check[role="green"]
+| System redeployment ({ay}) | ``Traditional`` | icon:check[role="green"]
+| Contact methods | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH | ``Traditional``: OSAD, RHNSD, SSH-push. ``Salt``: ZeroMQ, Salt-SSH
+| {productname} Proxy | icon:check[role="green"] | icon:check[role="green"]
+| Action chains | icon:check[role="green"] | icon:check[role="green"]
+| Software crash reporting | icon:times[role="danger"] | ``Traditional``
+| Staging (pre-download of packages) | icon:check[role="green"] | icon:check[role="green"]
+| Duplicate package reporting | icon:check[role="green"] | icon:check[role="green"]
+| CVE auditing |  icon:check[role="green"] | icon:check[role="green"]
+| SCAP auditing | icon:check[role="green"] | icon:check[role="green"]
+| Package verification | ``Traditional`` | ``Traditional``
+| Package locking | ``Traditional`` | ``Traditional``
+| System locking |  ``Traditional`` | ``Traditional``
+| System snapshot | ``Traditional`` | ``Traditional``
+| Configuration file management |  icon:check[role="green"] | icon:check[role="green"]
+| Snapshots and profiles |  ``Traditional``. ``Salt``: Profiles supported, Sync not supported | ``Traditional``. ``Salt``: Profiles supported, Sync not supported
 | Power management |  icon:check[role="green"] | icon:check[role="green"]
-| Monitoring |  icon:times[role="danger"]  | ``Salt``
-| Docker buildhost |  icon:question[role="gray"]   | icon:question[role="gray"]
-| Build Docker image with OS | ``Salt`` | ``Salt``
-| Kiwi buildhost |   icon:times[role="danger"] | icon:times[role="danger"]
+| Monitoring |  ``Salt`` | ``Salt``
+| Docker buildhost |  icon:times[role="danger"] | icon:times[role="danger"]
+| Build Docker image with OS | icon:times[role="danger"] | icon:times[role="danger"]
+| Kiwi buildhost |  icon:times[role="danger"] | icon:times[role="danger"]
 | Build Kiwi image with OS |  icon:times[role="danger"] | icon:times[role="danger"]
 |===
