--- a/modules/reference/pages/home/my-organization-configuration.adoc
+++ b/modules/reference/pages/home/my-organization-configuration.adoc
@@ -1,5 +1,5 @@
 [[ref.webui.overview.org.config]]
-= Ogranization Configuration
+= Organization Configuration
 
 On the menu:Main Menu[Home > My Organization > Configuration] page modify your personal information, such as name, password, and title.
 To modify any of this information, make the changes in the appropriate text fields and click the btn:[Update] button at the bottom.
