--- a/modules/reference/pages/home/my-organization-trusts.adoc
+++ b/modules/reference/pages/home/my-organization-trusts.adoc
@@ -1,5 +1,5 @@
 [[ref.webui.overview.org.trust]]
-= Ogranization Trusts
+= Organization Trusts
 
 The menu:Main Menu[Home > My Organization > Organization Trusts] page displays the trusts established with your organization (that is, the organization with which you, the logged-in user, are associated).
 The page also lists [guimenu]``Channels Shared``, which refers to channels available to your organization via others in the established trusts.
