Wrong menu paths!
The menu paths would lead you to the Lifecycle Management UI, not the configuration management UI.

--- a/modules/reference/pages/configuration/config-channels.adoc
+++ b/modules/reference/pages/configuration/config-channels.adoc
@@ -34,7 +34,7 @@ To create a new central configuration channel:
 
 [[proc.config.channels.create.cfgch]]
 .Procedure: Creating Central Configuration Channel
-. In the {productname} {webui}, navigate to menu:Content Lifecycle Management[Projects], and click btn:[Create Config Channel].
+. In the {productname} {webui}, navigate to menu:Configuration[Channels], and click btn:[Create Config Channel].
 . Enter a name for the channel.
 . Enter a label for the channel. This field must contain only letters, numbers, hyphens (``-``) and underscores (``_``).
 . Enter a mandatory description for the channel that allows you to distinguish it from other channels.
@@ -45,7 +45,7 @@ To create a new state channel with an [path]``init.sls`` file:
 
 [[proc.config.channels.create.statech]]
 .Procedure: Creating State Channel [Salt]
-. In the {productname} {webui}, navigate to menu:Content Lifecycle Management[Projects], and click btn:[Create State Channel].
+. In the {productname} {webui}, navigate to menu:Configuration[Channels], and click btn:[Create State Channel].
 . Enter a name for the channel.
 . Enter a label for the channel. This field must contain only letters, numbers, hyphens (``-``) and underscores (``_``).
 . Enter a mandatory description for the channel that allows you to distinguish it from other channels.
