Rename salt-commands page to salt-useful-commands

--- a/modules/salt/pages/salt-useful-commands.adoc
+++ b/modules/salt/pages/salt-useful-commands.adoc
@@ -1,5 +1,5 @@
-[[salt.commands]]
-= Salt Commands
+[[salt.useful_commands]]
+= Salt useful commands
 
 
 This section contains the most used Salt commands.
