--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -5,7 +5,7 @@ ifndef::backend-pdf[]
 ** xref:salt-intro.adoc[Introduction]
 ** xref:salt-terminology.adoc[Terminology]
 ** xref:salt-calls.adoc[Salt Calls]
-** xref:salt-commands.adoc[Salt Commands]
+** xref:salt-useful-commands.adoc[Salt Commands]
 ** xref:salt-states.adoc[Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
 // Formulas
@@ -44,7 +44,7 @@ include::modules/salt/pages/salt-terminology.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-calls.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-commands.adoc[leveloffset=+1]
+include::modules/salt/pages/salt-useful-commands.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-states.adoc[leveloffset=+1]
 
