Add extra example for salt-key

--- a/modules/salt/pages/salt-useful-commands.adoc
+++ b/modules/salt/pages/salt-useful-commands.adoc
@@ -40,6 +40,12 @@ List public keys:
 salt-key -l
 ----
 
+salt-key -a my-minion::
+Accept pending key for a minion:
+----
+salt-key -a my-minion
+----
+
 salt-key -A::
 Accept all pending keys:
 ----
