Rename salt-calls page to salt-command to avoid confusion

--- a/modules/salt/nav-salt-guide.adoc
+++ b/modules/salt/nav-salt-guide.adoc
@@ -4,8 +4,8 @@ ifndef::backend-pdf[]
 * Salt Guide
 ** xref:salt-intro.adoc[Introduction]
 ** xref:salt-terminology.adoc[Terminology]
-** xref:salt-calls.adoc[Salt Calls]
-** xref:salt-useful-commands.adoc[Salt Commands]
+** xref:salt-command.adoc[Salt Command]
+** xref:salt-useful-commands.adoc[Salt Useful Commands]
 ** xref:salt-states.adoc[Salt States]
 ** xref:salt-file-locations.adoc[File Locations]
 // Formulas
@@ -42,7 +42,7 @@ include::modules/salt/pages/salt-intro.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-terminology.adoc[leveloffset=+1]
 
-include::modules/salt/pages/salt-calls.adoc[leveloffset=+1]
+include::modules/salt/pages/salt-command.adoc[leveloffset=+1]
 
 include::modules/salt/pages/salt-useful-commands.adoc[leveloffset=+1]
 
