--- a/modules/salt/pages/salt-command.adoc
+++ b/modules/salt/pages/salt-command.adoc
@@ -1,7 +1,7 @@
-[[salt.calls]]
-= Salt Calls
+[[salt.command]]
+= The Salt Command
 
-Salt calls have three main components: target, function, and arguments.
+A Salt command have three main components: target, function, and arguments.
 The calls are constructed in this format:
 ----
 salt 'target' <function> [arguments]
@@ -14,9 +14,9 @@ The function is the particular task to be run.
 Arguments provide any extra data required by the function.
 
 
-== Salt Call Targets
+== Salt Targets
 
-Salt call targets allow you to specify a client or group of clients.
+Salt command targets allow you to specify a client or group of clients.
 There are several different targets you can use.
 
 General Targeting::
@@ -87,22 +87,22 @@ For more on targeting, see https://docs.saltstack.com/en/latest/topics/targeting
 
 
 
-== Salt Call Functions
+== Salt Execution Modules
 
-When you have specified a target, provide the function to call on the target.
+When you have specified a target, provide the module to execute on the target.
 
-Find which functions can be called on the target:
+Find which modules can be executed on the target:
 ----
 salt '*' sys.doc
 ----
 
-For a full list of callable functions, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html.
+For a full list of callable modules, see https://docs.saltstack.com/en/latest/ref/modules/all/index.html.
 
 
 
-== Salt Call Arguments
+== Salt Modules Arguments
 
-Functions accept arguments for any extra data.
+Modules accept arguments for any extra data.
 
 For example, the [command]``pkg.install`` function requires an argument specifying which package to install:
 ----
