Minor ajustments in salt-intro

--- a/modules/salt/pages/salt-intro.adoc
+++ b/modules/salt/pages/salt-intro.adoc
@@ -1,7 +1,7 @@
 [[salt-intro]]
 = Introduction
 
-Salt is a configuration management system used by {productname} to manage clients.
+Salt is a remote execution engine, configuration management and orchestration system used by {productname} to manage clients.
 
 In {productname}, the Salt master runs on the {productname} Server, allowing you to register and manage Salt clients.
 
