Minor ajustments in salt-example-formula

--- a/modules/salt/pages/salt-example-formula.adoc
+++ b/modules/salt/pages/salt-example-formula.adoc
@@ -1,5 +1,5 @@
 [[salt.formula.example]]
-= Install the Example Formula
+= Install the Salt Example Formula
 
 // This seems pretty pointless, and a bit out of date.Removed from nav. LKB 2019-08-20
 
