--- a/modules/salt/pages/salt-rate-limiting.adoc
+++ b/modules/salt/pages/salt-rate-limiting.adoc
@@ -26,11 +26,12 @@ Choosing a lower batch size will reduce system load and parallelism, but might r
 
 The batch size parameter sets the maximum number of clients that can execute a single action at the same time.
 Adjust the [systemitem]``java.salt_batch_size`` parameter.
-Defaults to 100.
+// Defaulte is 200 according to large-scale-tuning.adoc
+Defaults to 200.
 
-Increasing the delay increases the chance that multiple clients will have completed before the next action is issued, resulting in fewer overall commands, and reducing load.
+Increasing the delay increases the chance that multiple clients will have completed before the next action is issued (more clients are grouped together in subsequent batches), resulting in fewer overall commands, and reducing load.
 
-The batch delay parameter sets the amount of time, in seconds, to wait after a command is processed before beginning to process the command on the next client.
+The batch delay parameter sets the amount of time, in seconds, to wait after a command from the previous batch is processed before beginning to process the command on the next client.
 Adjust the [systemitem]``java.salt_batch_delay`` parameter.
 Defaults to 1.0 seconds.
 
