Use modules and function properly

--- a/modules/salt/pages/salt-command.adoc
+++ b/modules/salt/pages/salt-command.adoc
@@ -89,7 +89,7 @@ For more on targeting, see https://docs.saltstack.com/en/latest/topics/targeting
 
 == Salt Execution Modules
 
-When you have specified a target, provide the module to execute on the target.
+When you have specified a target, provide the module and function to execute on the target.
 
 Find which modules can be executed on the target:
 ----
@@ -100,9 +100,9 @@ For a full list of callable modules, see https://docs.saltstack.com/en/latest/re
 
 
 
-== Salt Modules Arguments
+== Salt Function Arguments
 
-Modules accept arguments for any extra data.
+Functions accept arguments for any extra data.
 
 For example, the [command]``pkg.install`` function requires an argument specifying which package to install:
 ----
