edits per feedback

--- a/modules/administration/pages/tshoot-registerclones.adoc
+++ b/modules/administration/pages/tshoot-registerclones.adoc
@@ -21,9 +21,9 @@ If more detailed instructions are required, put them in a "Resolving" procedure:
 
 
 If you are using {productname} to manage virtual machines, you might find it useful to create clones of your VMs.
-A clone is a VM that uses a primary data volume that is an exact copy of an existing data volume.
+A clone is a VM that uses a primary disk that is an exact copy of an existing disk.
 
-While cloning VMs can save you a lot of time, the duplicated identifying information on the data volume can sometimes cause problems.
+While cloning VMs can save you a lot of time, the duplicated identifying information on the disk can sometimes cause problems.
 
 If you have a client that is already registered, you create a clone of that client, and then try and register the clone, you probably want {productname} to register them as two separate clients.
 However, if the machine ID in both the original client and the clone is the same, {productname} will register both clients as one system, and the existing client data will be over-written with that of the clone.
