--- a/modules/salt/pages/salt-command.adoc
+++ b/modules/salt/pages/salt-command.adoc
@@ -1,7 +1,7 @@
 [[salt.command]]
 = The Salt Command
 
-A Salt command have three main components: target, function, and arguments.
+Salt commands have three main components: target, function, and arguments.
 The calls are constructed in this format:
 ----
 salt 'target' <function> [arguments]
