--- a/modules/client-configuration/pages/client-automating-preparation.adoc
+++ b/modules/client-configuration/pages/client-automating-preparation.adoc
@@ -116,18 +116,18 @@ Often used variables are:
 redhat_management_server::
 the server where you register to (automatically set).
 org::
-the organization id where this profile is created (automatically set).
+the organization ID where this profile is created (automatically set).
 registration_key::
-used in the register snippets.
+the key used in the registration snippets.
 When you specify it, you can set the activation key to be used to register the system.
 dont_register::
 if specified the registration will be skipped.
 allow_config_actions::
-if set to 1, it will allow traditional configuration management (traditional only).
+if set to ``1``, it will allow traditional configuration management (traditional only).
 allow_remote_commands::
-if set to 1, it will allow traditional remote command execution (traditional only).
+if set to ``1``, it will allow traditional remote command execution (traditional only).
 dont_disable_automatic_onlineupdate::
-if set, the automatic online update stay enabled (SUSE OSes only).
+if set, the automatic online update will stay enabled (SUSE OSes only).
 dont_disable_local_repos::
 if set, local repositories will stay active (not recommended).
 
