include new autoinst files

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -13,6 +13,8 @@ ifndef::backend-pdf[]
 *** xref:script-client-proxy.adoc[Registering with Bootstrap on a Proxy]
 // Automated Installation
 ** xref:autoinstallation-methods.adoc[Automating Client Installation]
+*** xref:client-automating-preparation.adoc[Preparation]
+*** xref:client-automating-installation.adoc[Installation]
 *** xref:autoyast.adoc[AutoYaST]
 *** xref:kickstart.adoc[Kickstart]
 *** xref:cobbler.adoc[Cobbler]
@@ -76,6 +78,8 @@ include::modules/client-configuration/pages/script-client-proxy.adoc[leveloffset
 // Automated Installation
 
 include::modules/client-configuration/pages/autoinstallation-methods.adoc[leveloffset=+1]
+include::modules/client-configuration/pages/client-automating-preparation.adoc[leveloffset=+1]
+include::modules/client-configuration/pages/client-automating-installation.adoc[leveloffset=+1]
 
 include::modules/client-configuration/pages/autoyast.adoc[leveloffset=+2]
 
