--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -1,13 +1,15 @@
-[[client-cfg-autoinstallation]]
-== Starting an Autoinstallation
+[[client-cfg-autoinstallation-autoyast]]
+== Start an Autoinstallation with {ay}
 
-To start an autoinstallation the system must be known to SUSE Manager already.
-You can use Bare-metal Provisioning (https://opensource.suse.com/doc-susemanager/suse-manager/reference/admin/bare-metal-systems.html)
-to bring the system into SUSE Manager or you use the api system.createSystemRecord() or system.createSystemProfile().
+To start an autoinstallation the system must be known to {productname} already.
+You can use Bare-metal Provisioning to bring systems into {productname}.
+For more information, see xref:reference:admin/bare-metal-systems.adoc[].
 
-```
-$> spacecmd api -- --args '["systemname", {"hwAddress": "00:25:22:71:e7:c6", "hostname":"systemname"}]' system.createSystemProfile
-```
+On the command line, you can use the API calls [systemitem]``system.createSystemRecord`` or [systemitem]``system.createSystemProfile`` to bring systems into {productname}.  For example (replace [literal]``<hw_addr>`` with a hardware address such as [literal]``00:25:22:71:e7:c6`` and [literal]``<name>`` with the name of your system):
+
+----
+spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<name>"}]' system.createSystemProfile
+----
 
 Go to Systems => Overview => Select the system => Provisioning => Autoinstallation => Schedule
 and select the autoyast profile you want to use to re-install the system.
