--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -5,20 +5,26 @@ To start an autoinstallation the system must be known to {productname} already.
 You can use Bare-metal Provisioning to bring systems into {productname}.
 For more information, see xref:reference:admin/bare-metal-systems.adoc[].
 
-On the command line, you can use the API calls [systemitem]``system.createSystemRecord`` or [systemitem]``system.createSystemProfile`` to bring systems into {productname}.  For example (replace [literal]``<hw_addr>`` with a hardware address such as [literal]``00:25:22:71:e7:c6`` and [literal]``<name>`` with the name of your system):
+On the command line, you can use the API calls [systemitem]``system.createSystemRecord`` or [systemitem]``system.createSystemProfile`` to bring systems into {productname}.
+For example (replace [literal]``<hw_addr>`` with a hardware address such as [literal]``00:25:22:71:e7:c6`` and [literal]``<name>`` with the name of your system):
 
 ----
 spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<name>"}]' system.createSystemProfile
 ----
 
-Go to Systems => Overview => Select the system => Provisioning => Autoinstallation => Schedule
-and select the autoyast profile you want to use to re-install the system.
+.Procedure
+. Navigate to menu:Systems[Overview], and select the system for the autoinstallation.
+
+. On the systems details page, click menu:Provisioning[Autoinstallation > Schedule] and select the {ay} profile you want to use to (re-)install the system.
+
+
+
 
 (Advanced)
 
-The "Create PXE installation configuration" can be used if the system should be installed for the first time.
-A PXE boot configuration will be created and when you power on the machine and it is booting from the network
-the correct profile will be selected.
+The "Create PXE installation configuration" option can be used if the system should be installed for the first time.
+A PXE boot configuration will be created.
+When you power on the machine it is booting from the network and the correct profile will be selected.
  
-If the system is already managed you can click on "Schedule Autoinstallation and Finish" button to start the installation.
+If the system is already managed you can click btn:[Schedule Autoinstallation and Finish] to start the installation.
 
