--- a/modules/client-configuration/pages/client-automating-installation.adoc
+++ b/modules/client-configuration/pages/client-automating-installation.adoc
@@ -22,7 +22,7 @@ spacecmd api -- --args '["systemname", {"hwAddress": "<hw_addr>", "hostname":"<n
 
 (Advanced)
 
-The "Create PXE installation configuration" option can be used if the system should be installed for the first time.
+The btn:[Create PXE installation configuration] option can be used if the system should be installed for the first time.
 A PXE boot configuration will be created.
 When you power on the machine it is booting from the network and the correct profile will be selected.
  
