edits, updated nav

--- a/modules/client-configuration/nav-client-config-guide.adoc
+++ b/modules/client-configuration/nav-client-config-guide.adoc
@@ -20,8 +20,11 @@ ifndef::backend-pdf[]
 // Non-SUSE Clients
 ** xref:non-suse-clients.adoc[Other Clients]
 *** xref:clients-rh.adoc[Red Hat Clients]
+**** xref:supported-features-rh.adoc[Red Hat Supported Features]
 *** xref:clients-centos.adoc[CentOS Clients]
+**** xref:supported-features-centos.adoc[CentOS Supported Features]
 *** xref:clients-ubuntu.adoc[Ubuntu Clients]
+**** xref:supported-features-ubuntu.adoc[Ubuntu Supported Features]
 // Virtualization
 ** xref:virtualization.adoc[Virtualization]
 *** xref:virt-xenkvm.adoc[Virtualization with Xen and KVM]
@@ -91,9 +94,15 @@ include::modules/client-configuration/pages/non-suse-clients.adoc[leveloffset=+1
 
 include::modules/client-configuration/pages/clients-rh.adoc[leveloffset=+2]
 
+include::modules/client-configuration/pages/supported-features-rh.adoc[leveloffset=+3]
+
 include::modules/client-configuration/pages/clients-centos.adoc[leveloffset=+2]
 
+include::modules/client-configuration/pages/supported-features-centos.adoc[leveloffset=+3]
+
 include::modules/client-configuration/pages/clients-ubuntu.adoc[leveloffset=+2]
+
+include::modules/client-configuration/pages/supported-features-ubuntu.adoc[leveloffset=+3]
 
 // Virtualization
 include::modules/client-configuration/pages/virtualization.adoc[leveloffset=+1]
