--- a/modules/client-configuration/pages/supported-features.adoc
+++ b/modules/client-configuration/pages/supported-features.adoc
@@ -1,9 +1,12 @@
 [[supported-features]]
 = Supported Clients and Features
 
-{productname} is compatible with a range of client technologies: you can install traditional or Salt clients, running {sle} or another Linux operating system, with a range of hardware options.
+{productname} is compatible with a range of client technologies.
+You can install traditional or Salt clients, running {sle} or another Linux operating system, with a range of hardware options.
 
-This sections contains a list of supported client systems, and a list of the features available on each client type.
+This section contains a list of supported client systems, and a list of the features available on {suse} clients.
+
+For a list of features available on other clients, see the section for the client in xref:client-configuration:non-suse-clients.adoc[].
 
 
 == Supported Client Systems
