fixed RES entity

--- a/modules/client-configuration/pages/supported-features-rh.adoc
+++ b/modules/client-configuration/pages/supported-features-rh.adoc
@@ -2,7 +2,7 @@
 = Supported Red Hat Features
 
 
-This table lists the availability of various features on {rhel} and {res} clients.
+This table lists the availability of various features on {rhel} and {redhat} Expanded Support (RES) clients.
 
 The icons in this table indicate:
 
@@ -16,7 +16,7 @@ The icons in this table indicate:
 [cols="1,1,1,1,1", options="header"]
 .Supported Features on {rhel} Operating Systems
 |===
-| Feature | {res}{nbsp}6 | {res}{nbsp}7 | {rhel}{nbsp}6 | {rhel}{nbsp}8
+| Feature | RES{nbsp}6 | RES{nbsp}7 | {rhel}{nbsp}6 | {rhel}{nbsp}8
 | Client  | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Registration | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
 | Install packages | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"] | icon:check[role="green"]
